fix for collapsing menu on tablet and landscape phone size

--- a/web/themes/custom/myusf/sass/src/main.scss
+++ b/web/themes/custom/myusf/sass/src/main.scss
@@ -102,8 +102,24 @@ body {
 		}
 	}
 }
-
-.col-md-3, .col-lg-3{
+.col-lg-3 {
+	@include media-breakpoint-up(desktop) {
+		/*max-width: unset;*/
+		max-width: 220px;
+		&.order-last {
+			max-width: 270px;
+		}
+	}
+	@include media-breakpoint-up(large_desktop) {
+		max-width: 270px;
+	}
+	@include media-breakpoint-down(phone) {
+		&#sidebar_first {
+		    margin-bottom: 30px;
+		}
+	}
+}
+.col-md-3 { /*.col-lg-3*/
 	
 	@include media-breakpoint-up(desktop) {
 		/*max-width: unset;*/
